<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.sebastianchimal.happy.WelcomeActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Nombre"
        android:id="@+id/textView22"
        android:textSize="@dimen/TamañoNombre"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Bienvenido"
        android:id="@+id/textView3"
        android:layout_below="@+id/textView22"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/TamañoNombre" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Entrevistas"
        android:id="@+id/button3"
        android:layout_below="@+id/textView3"
        android:layout_centerHorizontal="true"
        android:onClick="abreBrowser" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editText2"
        android:layout_centerVertical="true"
        android:layout_alignRight="@+id/textView22"
        android:layout_alignEnd="@+id/textView22"
        android:hint="@string/hName"
        android:textSize="@dimen/TamañoNombre" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/BotonCalcula"
        android:id="@+id/button4"
        android:layout_below="@+id/editText2"
        android:layout_alignLeft="@+id/button3"
        android:layout_alignStart="@+id/button3"
        android:onClick="convierteDolares"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/USD"
        android:id="@+id/textView2"
        android:layout_below="@+id/button4"
        android:layout_alignLeft="@+id/textView22"
        android:layout_alignStart="@+id/textView22"
        android:layout_marginTop="58dp"
        android:textSize="@dimen/KateTamaño" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Narco"
        android:id="@+id/textView4"
        android:layout_below="@+id/textView2"
        android:layout_alignLeft="@+id/textView2"
        android:layout_alignStart="@+id/textView2"
        android:textSize="@dimen/KateTamaño" />

</RelativeLayout>
